responsive design fixed. buttons stacking on mobile viewport

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ body {
 }
 
 .app-logo {
-  width: 270px;
-  height: 200px;
+  width: 40%;
+  margin: auto;
   padding: 5px;
   padding-top: 10px;
 }
@@ -46,7 +46,7 @@ body {
 .textbody {
   background-image: url("../assets/images/GoT-Logo-bkgd2.png");
   color: #110f15;
-  font-size: 18px;
+  font-size: 24px;
   width: 100%;
   height: auto;
   margin: 20px 0px;
@@ -235,32 +235,28 @@ li {
 
 .sticky-footer-css {
   height: 100vh;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .sticky-footer {
   margin-top: 25px;
   padding: 20px 0;
-  height: 150px;
+  height: 25%;
   width: 100%;
   background-color: #110f15;
   color: #fff;
 }
 
 .logo {
-  width: 100px;
-  height: 60px;
+  width: 10%;
+  margin: auto;
   padding: 5px;
-  padding-top: 10px;
 }
 
 p.text-footer {
   font-family: "Open Sans", sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   text-transform: uppercase;
-  padding-top: 5px;
 }
 
 /* MEDIA QUERIES */
@@ -280,18 +276,20 @@ p.text-footer {
   }
 
   .fandom {
-    font-size: 16px;
+    font-size: 22px;
     margin-top: -20px;
   }
 
   .catchy-title {
-    font-size: 26px;
-    margin-top: -15px;
+    font-size: 32px;
+    margin-top: -10px;
     padding: 10px 0;
+    line-height: 15px;
   }
 
   .quill {
     color: #9b2c33;
+    margin-left: 15px;
   }
 
   .textbody {
@@ -300,6 +298,7 @@ p.text-footer {
     margin: 10px 0;
     width: 84%;
     margin: auto;
+    font-size: 18px;
   }
 
   .hero {
@@ -378,7 +377,9 @@ p.text-footer {
   /* MENU STYLE */
   .menu a {
     padding: 22px 20px;
-    font-size: 10px;
+    font-size: 14px;
+    margin: 20px 10px;
+    
   }
 
   li {
@@ -434,7 +435,7 @@ p.text-footer {
   }
 
   .fandom {
-    font-size: 20px;
+    font-size: 28px;
     color: #9b2c33;
     text-transform: capitalize;
     font-weight: bolder;
@@ -443,14 +444,19 @@ p.text-footer {
 
   .catchy-title {
     font-family: "Italianno", cursive;
-    font-size: 28px;
-    margin-top: -25px;
+    font-size: 42px;
+    margin-top: -15px;
     padding: 20px 0;
+    line-height: 15px;
   }
 
   .quill {
     color: #9b2c33;
     margin-left: 10px;
     padding: 0;
+  }
+
+  .textbody {
+    font-size: 20px;
   }
 }
